--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -19,94 +19,94 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
-.x9cbad8a9f7e49111bc5f374e08bad07f a{
-font-size:16px;
-}
-.x9cbad8a9f7e49111bc5f374e08bad07f p,.x9cbad8a9f7e49111bc5f374e08bad07f span,.x9cbad8a9f7e49111bc5f374e08bad07f label{
-font-size:16px!important;
-}
-footer a{
+footer{
+background:#000000;
 color:#ffffff;
-text-decoration: underline;
 }
-.y85b5b4acf1bb10903bcef8ae5d09ce45:hover{
-box-shadow: 0 50.1px 49.6px -25px rgb(0 0 0 / 30%);
-transform: rotate(-2deg) scale(1.03);
+.vc0606bc4d8892ef97701428ab508680b{
+background-color:#ffc107!important;
+border-color:#ffc107!important;
+color:#000000!important;
 }
 .navbar a{
-font-size: 18.1px!important;
+font-size: 18.4px!important;
 font-weight: bold;
-}
-html{
-scroll-behavior: smooth;
-}
-.nav-item{
-padding-left:7.9px;
-padding-right:8px;
-padding-top:4.6px;
-padding-bottom:4.8px;
-}
-footer *{
-font-size:16px !important;
-}
-.btn-md{
-padding: 14.8px 30.2px;
-border-radius: 0;
 }
 .nav-link{
 color: #000000!important;
 
 }
-*{
-font-family: 'Kumbh Sans', sans-serif;
-}
-.a3d7d04aaa893f4d7cf766cfae277ee90 a,.x9cbad8a9f7e49111bc5f374e08bad07f a{
-color:#121212!important;
-text-decoration: underline !important;
-}
-.ee1b2b672b948e05637a2ee51bcdaea31{
-background-color:#ffc107!important;
-border-color:#ffc107!important;
-color:#000000!important;
-}
-footer{
-background:#050505;
-color:#ffffff;
-}
-.a3d7d04aaa893f4d7cf766cfae277ee90 p,.a3d7d04aaa893f4d7cf766cfae277ee90 a,.a3d7d04aaa893f4d7cf766cfae277ee90 span,.a3d7d04aaa893f4d7cf766cfae277ee90 label{
+.vaa8e8d2a4a9977d232945f6d52fe054f p,.vaa8e8d2a4a9977d232945f6d52fe054f a,.vaa8e8d2a4a9977d232945f6d52fe054f span,.vaa8e8d2a4a9977d232945f6d52fe054f label{
 font-size:16px!important;
 }
-ul{
-list-style: circle;
+html{
+scroll-behavior: smooth;
 }
 a{
 text-decoration: none!important;
 }
+.u3fbbae1a8a7308ac969ec9b86c9382cf p,.u3fbbae1a8a7308ac969ec9b86c9382cf span,.u3fbbae1a8a7308ac969ec9b86c9382cf label{
+font-size:16px!important;
+}
+footer *{
+font-size:16px !important;
+}
+.nav-item{
+padding-left:8px;
+padding-right:7.5px;
+padding-top:4.9px;
+padding-bottom:5.5px;
+}
+footer a{
+color:#ffffff;
+text-decoration: underline;
+}
+*{
+font-family: 'Kumbh Sans', sans-serif;
+}
+ul{
+list-style: circle;
+}
+.vaa8e8d2a4a9977d232945f6d52fe054f a,.u3fbbae1a8a7308ac969ec9b86c9382cf a{
+color:#000000!important;
+text-decoration: underline !important;
+}
+.u3fbbae1a8a7308ac969ec9b86c9382cf a{
+font-size:16px;
+}
+.btn-md{
+padding: 15.3px 29.9px;
+border-radius: 0;
+}
+.ya563304cf4eb4e7e831080cfafdceb9e:hover{
+box-shadow: 0 49.8px 49.9px -25px rgb(0 0 0 / 30%);
+transform: rotate(-2deg) scale(1.03);
+}
 </style>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg">
+<nav class="navbar-expand-lg navbar">
 <a class="navbar-brand" href="index.html"  ><img alt="img/logo.jpg" src="img/logo.jpg" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarSupportedContent">
 <ul class="d-flex ml-auto navbar-nav align-items-center"><li class="nav-item">
-<a class="d29349229e0ca58c2b7ffdc1065450287 nav-link" href="index.html" >plumbing quotes</a>
+<a class="wfbc1966f875e2b9332a600ecc4dba14c nav-link" href="index.html" >plumbing quotes</a>
 </li>
 <li class="nav-item">
-<a class="d29349229e0ca58c2b7ffdc1065450287 nav-link" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
+<a class="wfbc1966f875e2b9332a600ecc4dba14c nav-link" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
 </li>
 <li class="nav-item">
-<a class="d29349229e0ca58c2b7ffdc1065450287 nav-link" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
+<a class="nav-link wfbc1966f875e2b9332a600ecc4dba14c" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
 </li>
 <li class="nav-item">
-<a class="d29349229e0ca58c2b7ffdc1065450287 nav-link" href="quote-my-job.html" >quote my job</a>
+<a class="wfbc1966f875e2b9332a600ecc4dba14c nav-link" href="quote-my-job.html" >quote my job</a>
 </li>
-<li class="dropdown nav-item">
-<a class="nav-link d29349229e0ca58c2b7ffdc1065450287 dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
+<li class="nav-item dropdown">
+<a class="nav-link dropdown-toggle wfbc1966f875e2b9332a600ecc4dba14c" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
 <div class="dropdown-menu-right dropdown-menu" aria-labelledby="navbarDropdown">
 <a class="dropdown-item" href="local-plumber.html"  >local plumber</a><a class="dropdown-item" href="plumber-in-north-london.html"  >plumber in north london</a><a class="dropdown-item" href="local-plumbing-service.html"  >local plumbing service</a><a class="dropdown-item" href="plumber-north-london.html"  >plumber north london</a></div>
 </li>
-<li class="nav-item"><a class="d29349229e0ca58c2b7ffdc1065450287 nav-link" rel=nofollow href="about-us.html">About Us</a>
+<li class="nav-item"><a class="nav-link wfbc1966f875e2b9332a600ecc4dba14c" rel=nofollow href="about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -173,22 +173,22 @@ https://www.mmlplumbing.co.uk/</br>
 </p>
 </section>
 <footer>
-<div class="pt-5 py-4 container" >
+<div class="py-4 pt-5 container" >
 <div class="row"><div class="col-lg-3">
 <p>MML Plumbing</p>
-<p>Company Website : <a class="d29349229e0ca58c2b7ffdc1065450287" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
-</div><div class="col-lg-3"><p><a class="d29349229e0ca58c2b7ffdc1065450287" href="sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="d29349229e0ca58c2b7ffdc1065450287" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="d29349229e0ca58c2b7ffdc1065450287" href="about-us.html" rel="nofollow">About Us</a></p>
+<p>Company Website : <a class="wfbc1966f875e2b9332a600ecc4dba14c" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
+</div><div class="col-lg-3"><p><a class="wfbc1966f875e2b9332a600ecc4dba14c" href="sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="wfbc1966f875e2b9332a600ecc4dba14c" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="wfbc1966f875e2b9332a600ecc4dba14c" href="about-us.html" rel="nofollow">About Us</a></p>
 <p><img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=" ></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook e1cad9cca070ec3468938500e6c357824" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="pinterest e1cad9cca070ec3468938500e6c357824" rel="nofollow"><i class="fa fa-linkedin"></i></a>
-<a href="https://www.instagram.com/mmlplumbingltd/" class="google e1cad9cca070ec3468938500e6c357824-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
-<a href="https://twitter.com/mmlplumbing" class="e1cad9cca070ec3468938500e6c357824 twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/mmlplumbing.co.uk" class="v2acdc8717b9b39cc657cd93a1f749b5c facebook" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="pinterest v2acdc8717b9b39cc657cd93a1f749b5c" rel="nofollow"><i class="fa fa-linkedin"></i></a>
+<a href="https://www.instagram.com/mmlplumbingltd/" class="v2acdc8717b9b39cc657cd93a1f749b5c google-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
+<a href="https://twitter.com/mmlplumbing" class="v2acdc8717b9b39cc657cd93a1f749b5c twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
