--- a/sitemap.html
+++ b/sitemap.html
@@ -18,55 +18,53 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
-a{
-text-decoration: none!important;
-}
-footer{
-background:#131313;
-color:#ffffff;
-}
-.za13bc4a19994185fbcf0e515f6b84034 p,.za13bc4a19994185fbcf0e515f6b84034 span,.za13bc4a19994185fbcf0e515f6b84034 label{
-font-size:16px!important;
-}
-.e82852eaf5dd140d3e28f482c9976808a:hover{
-box-shadow: 0 50.5px 50.1px -25px rgb(0 0 0 / 30%);
-transform: rotate(-2deg) scale(1.03);
-}
-.za13bc4a19994185fbcf0e515f6b84034 a{
-font-size:16px;
-}
-.v218e74cb0b97b38789853385d20a1811{
-background-color:#ffc107!important;
-border-color:#ffc107!important;
-color:#000000!important;
-}
-.navbar a{
-font-size: 18.5px!important;
-font-weight: bold;
-}
-.z9f619eafb854514ce0a06d59f8f3f2ef a,.za13bc4a19994185fbcf0e515f6b84034 a{
-color:#141414!important;
-text-decoration: underline !important;
-}
-.nav-item{
-padding-left:8.5px;
-padding-right:7.9px;
-padding-top:5.5px;
-padding-bottom:4.7px;
+ul{
+list-style: circle;
 }
 *{
 font-family: 'Kumbh Sans', sans-serif;
 }
-.z9f619eafb854514ce0a06d59f8f3f2ef p,.z9f619eafb854514ce0a06d59f8f3f2ef a,.z9f619eafb854514ce0a06d59f8f3f2ef span,.z9f619eafb854514ce0a06d59f8f3f2ef label{
-font-size:16px!important;
-}
-.btn-md{
-padding: 14.9px 29.6px;
-border-radius: 0;
-}
 footer a{
 color:#ffffff;
 text-decoration: underline;
+}
+.btn-md{
+padding: 15.3px 29.9px;
+border-radius: 0;
+}
+a{
+text-decoration: none!important;
+}
+html{
+scroll-behavior: smooth;
+}
+.nav-item{
+padding-left:7.9px;
+padding-right:7.7px;
+padding-top:5.1px;
+padding-bottom:4.6px;
+}
+.u833e1f9dade1f2f993af8dd258a1844d p,.u833e1f9dade1f2f993af8dd258a1844d a,.u833e1f9dade1f2f993af8dd258a1844d span,.u833e1f9dade1f2f993af8dd258a1844d label{
+font-size:16px!important;
+}
+.z877d68b5d06f2b91cf499584ff14f603 a{
+font-size:16px;
+}
+.navbar a{
+font-size: 18.2px!important;
+font-weight: bold;
+}
+.b809ad97b1cee5c5f348405444095efc3:hover{
+box-shadow: 0 50.2px 50.5px -25px rgb(0 0 0 / 30%);
+transform: rotate(-2deg) scale(1.03);
+}
+.u833e1f9dade1f2f993af8dd258a1844d a,.z877d68b5d06f2b91cf499584ff14f603 a{
+color:#141414!important;
+text-decoration: underline !important;
+}
+footer{
+background:#020202;
+color:#ffffff;
 }
 footer *{
 font-size:16px !important;
@@ -75,11 +73,13 @@ font-size:16px !important;
 color: #000000!important;
 
 }
-ul{
-list-style: circle;
+.z22e45c34fd32338be695b3a1a9c80c07{
+background-color:#ffc107!important;
+border-color:#ffc107!important;
+color:#000000!important;
 }
-html{
-scroll-behavior: smooth;
+.z877d68b5d06f2b91cf499584ff14f603 p,.z877d68b5d06f2b91cf499584ff14f603 span,.z877d68b5d06f2b91cf499584ff14f603 label{
+font-size:16px!important;
 }
 </style>
 </head>
@@ -88,31 +88,31 @@ scroll-behavior: smooth;
 <a class="navbar-brand" href="https://olb45.netlify.app/index.html"  ><img alt="img/logo.jpg" src="img/logo.jpg" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarSupportedContent">
-<ul class="align-items-center d-flex navbar-nav ml-auto"><li class="nav-item">
-<a class="nav-link z11efd8b73161451666278d058336c130" href="https://olb45.netlify.app/index.html" >plumbing quotes</a>
+<ul class="align-items-center d-flex ml-auto navbar-nav"><li class="nav-item">
+<a class="ueddc002d43b0143851a28b58fefd6845 nav-link" href="https://olb45.netlify.app/index.html" >plumbing quotes</a>
 </li>
 <li class="nav-item">
-<a class="nav-link z11efd8b73161451666278d058336c130" href="https://olb45.netlify.app/plumbing-quotes-north-london.html" >plumbing quotes north london</a>
+<a class="ueddc002d43b0143851a28b58fefd6845 nav-link" href="https://olb45.netlify.app/plumbing-quotes-north-london.html" >plumbing quotes north london</a>
 </li>
 <li class="nav-item">
-<a class="z11efd8b73161451666278d058336c130 nav-link" href="https://olb45.netlify.app/quote-my-plumbing-job.html" >quote my plumbing job</a>
+<a class="nav-link ueddc002d43b0143851a28b58fefd6845" href="https://olb45.netlify.app/quote-my-plumbing-job.html" >quote my plumbing job</a>
 </li>
 <li class="nav-item">
-<a class="nav-link z11efd8b73161451666278d058336c130" href="https://olb45.netlify.app/quote-my-job.html" >quote my job</a>
+<a class="ueddc002d43b0143851a28b58fefd6845 nav-link" href="https://olb45.netlify.app/quote-my-job.html" >quote my job</a>
 </li>
-<li class="dropdown nav-item">
-<a class="z11efd8b73161451666278d058336c130 dropdown-toggle nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
-<div class="dropdown-menu-right dropdown-menu" aria-labelledby="navbarDropdown">
+<li class="nav-item dropdown">
+<a class="dropdown-toggle nav-link ueddc002d43b0143851a28b58fefd6845" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
+<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
 <a class="dropdown-item" href="https://olb45.netlify.app/local-plumber.html"  >local plumber</a><a class="dropdown-item" href="https://olb45.netlify.app/plumber-in-north-london.html"  >plumber in north london</a><a class="dropdown-item" href="https://olb45.netlify.app/local-plumbing-service.html"  >local plumbing service</a><a class="dropdown-item" href="https://olb45.netlify.app/plumber-north-london.html"  >plumber north london</a></div>
 </li>
-<li class="nav-item"><a class="z11efd8b73161451666278d058336c130 nav-link" rel=nofollow href="https://olb45.netlify.app/about-us.html">About Us</a>
+<li class="nav-item"><a class="ueddc002d43b0143851a28b58fefd6845 nav-link" rel=nofollow href="https://olb45.netlify.app/about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
 <section class="container" style="min-height: 80vh;">
 <div>
 <nav> HTML Site Map</nav>
-<h3><span>Last updated:2023 Oct, Fri </h3>
+<h3><span>Last updated:2023 Oct, Mon </h3>
 </div>
 <div>
 <ul>
@@ -134,22 +134,22 @@ scroll-behavior: smooth;
 </div>
 </section>
 <footer>
-<div class="pt-5 container py-4" >
+<div class="container py-4 pt-5" >
 <div class="row"><div class="col-lg-3">
 <p>MML Plumbing</p>
-<p>Company Website : <a class="z11efd8b73161451666278d058336c130" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
-</div><div class="col-lg-3"><p><a class="z11efd8b73161451666278d058336c130" href="https://olb45.netlify.app/sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="z11efd8b73161451666278d058336c130" href="https://olb45.netlify.app/privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="z11efd8b73161451666278d058336c130" href="https://olb45.netlify.app/about-us.html" rel="nofollow">About Us</a></p>
+<p>Company Website : <a class="ueddc002d43b0143851a28b58fefd6845" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
+</div><div class="col-lg-3"><p><a class="ueddc002d43b0143851a28b58fefd6845" href="https://olb45.netlify.app/sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="ueddc002d43b0143851a28b58fefd6845" href="https://olb45.netlify.app/privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="ueddc002d43b0143851a28b58fefd6845" href="https://olb45.netlify.app/about-us.html" rel="nofollow">About Us</a></p>
 <p><img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=https://olb45.netlify.app/.html"></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/mmlplumbing.co.uk" class="w327b909a5e24a3e0d7bc1f721a0a48a7 facebook" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="w327b909a5e24a3e0d7bc1f721a0a48a7 pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
-<a href="https://www.instagram.com/mmlplumbingltd/" class="w327b909a5e24a3e0d7bc1f721a0a48a7 google-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
-<a href="https://twitter.com/mmlplumbing" class="w327b909a5e24a3e0d7bc1f721a0a48a7 twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook c105001af79c6458074aa12bce28152b1" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="c105001af79c6458074aa12bce28152b1 pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
+<a href="https://www.instagram.com/mmlplumbingltd/" class="google c105001af79c6458074aa12bce28152b1-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
+<a href="https://twitter.com/mmlplumbing" class="c105001af79c6458074aa12bce28152b1 twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
