--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -19,94 +19,94 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
-footer{
-background:#000000;
-color:#ffffff;
-}
-.vc0606bc4d8892ef97701428ab508680b{
-background-color:#ffc107!important;
-border-color:#ffc107!important;
-color:#000000!important;
-}
-.navbar a{
-font-size: 18.4px!important;
-font-weight: bold;
-}
-.nav-link{
-color: #000000!important;
-
-}
-.vaa8e8d2a4a9977d232945f6d52fe054f p,.vaa8e8d2a4a9977d232945f6d52fe054f a,.vaa8e8d2a4a9977d232945f6d52fe054f span,.vaa8e8d2a4a9977d232945f6d52fe054f label{
-font-size:16px!important;
-}
-html{
-scroll-behavior: smooth;
-}
-a{
-text-decoration: none!important;
-}
-.u3fbbae1a8a7308ac969ec9b86c9382cf p,.u3fbbae1a8a7308ac969ec9b86c9382cf span,.u3fbbae1a8a7308ac969ec9b86c9382cf label{
-font-size:16px!important;
+*{
+font-family: 'Kumbh Sans', sans-serif;
 }
 footer *{
 font-size:16px !important;
 }
-.nav-item{
-padding-left:8px;
-padding-right:7.5px;
-padding-top:4.9px;
-padding-bottom:5.5px;
+a{
+text-decoration: none!important;
+}
+html{
+scroll-behavior: smooth;
+}
+.btn-md{
+padding: 15.5px 30.3px;
+border-radius: 0;
 }
 footer a{
 color:#ffffff;
 text-decoration: underline;
 }
-*{
-font-family: 'Kumbh Sans', sans-serif;
+footer{
+background:#060606;
+color:#ffffff;
+}
+.nav-link{
+color: #000000!important;
+
+}
+.yc3348df9535c52319850f76fec6c301f a,.ya216aaf9d288743b93b8b9a3f4edd8ae a{
+color:#060606!important;
+text-decoration: underline !important;
+}
+.navbar a{
+font-size: 18.1px!important;
+font-weight: bold;
+}
+.ya216aaf9d288743b93b8b9a3f4edd8ae a{
+font-size:16px;
+}
+.yc3348df9535c52319850f76fec6c301f p,.yc3348df9535c52319850f76fec6c301f a,.yc3348df9535c52319850f76fec6c301f span,.yc3348df9535c52319850f76fec6c301f label{
+font-size:16px!important;
+}
+.xf209f5bdf3a023fd2b53e71c21b5e6e3:hover{
+box-shadow: 0 50px 50.5px -25px rgb(0 0 0 / 30%);
+transform: rotate(-2deg) scale(1.03);
+}
+.ya216aaf9d288743b93b8b9a3f4edd8ae p,.ya216aaf9d288743b93b8b9a3f4edd8ae span,.ya216aaf9d288743b93b8b9a3f4edd8ae label{
+font-size:16px!important;
+}
+.ba5422f5275feea127c9cfd5389fe1f26{
+background-color:#ffc107!important;
+border-color:#ffc107!important;
+color:#000000!important;
+}
+.nav-item{
+padding-left:8.4px;
+padding-right:8.5px;
+padding-top:5.4px;
+padding-bottom:4.5px;
 }
 ul{
 list-style: circle;
 }
-.vaa8e8d2a4a9977d232945f6d52fe054f a,.u3fbbae1a8a7308ac969ec9b86c9382cf a{
-color:#000000!important;
-text-decoration: underline !important;
-}
-.u3fbbae1a8a7308ac969ec9b86c9382cf a{
-font-size:16px;
-}
-.btn-md{
-padding: 15.3px 29.9px;
-border-radius: 0;
-}
-.ya563304cf4eb4e7e831080cfafdceb9e:hover{
-box-shadow: 0 49.8px 49.9px -25px rgb(0 0 0 / 30%);
-transform: rotate(-2deg) scale(1.03);
-}
 </style>
 </head>
 <body>
-<nav class="navbar-expand-lg navbar">
+<nav class="navbar navbar-expand-lg">
 <a class="navbar-brand" href="index.html"  ><img alt="img/logo.jpg" src="img/logo.jpg" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarSupportedContent">
-<ul class="d-flex ml-auto navbar-nav align-items-center"><li class="nav-item">
-<a class="wfbc1966f875e2b9332a600ecc4dba14c nav-link" href="index.html" >plumbing quotes</a>
+<ul class="ml-auto align-items-center navbar-nav d-flex"><li class="nav-item">
+<a class="ff860b7b7373e13a7b61bae8f50ac437a nav-link" href="index.html" >plumbing quotes</a>
 </li>
 <li class="nav-item">
-<a class="wfbc1966f875e2b9332a600ecc4dba14c nav-link" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
+<a class="nav-link ff860b7b7373e13a7b61bae8f50ac437a" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
 </li>
 <li class="nav-item">
-<a class="nav-link wfbc1966f875e2b9332a600ecc4dba14c" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
+<a class="ff860b7b7373e13a7b61bae8f50ac437a nav-link" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
 </li>
 <li class="nav-item">
-<a class="wfbc1966f875e2b9332a600ecc4dba14c nav-link" href="quote-my-job.html" >quote my job</a>
+<a class="ff860b7b7373e13a7b61bae8f50ac437a nav-link" href="quote-my-job.html" >quote my job</a>
 </li>
-<li class="nav-item dropdown">
-<a class="nav-link dropdown-toggle wfbc1966f875e2b9332a600ecc4dba14c" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
-<div class="dropdown-menu-right dropdown-menu" aria-labelledby="navbarDropdown">
+<li class="dropdown nav-item">
+<a class="dropdown-toggle ff860b7b7373e13a7b61bae8f50ac437a nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
+<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
 <a class="dropdown-item" href="local-plumber.html"  >local plumber</a><a class="dropdown-item" href="plumber-in-north-london.html"  >plumber in north london</a><a class="dropdown-item" href="local-plumbing-service.html"  >local plumbing service</a><a class="dropdown-item" href="plumber-north-london.html"  >plumber north london</a></div>
 </li>
-<li class="nav-item"><a class="nav-link wfbc1966f875e2b9332a600ecc4dba14c" rel=nofollow href="about-us.html">About Us</a>
+<li class="nav-item"><a class="ff860b7b7373e13a7b61bae8f50ac437a nav-link" rel=nofollow href="about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -173,22 +173,22 @@ https://www.mmlplumbing.co.uk/</br>
 </p>
 </section>
 <footer>
-<div class="py-4 pt-5 container" >
+<div class="pt-5 container py-4" >
 <div class="row"><div class="col-lg-3">
 <p>MML Plumbing</p>
-<p>Company Website : <a class="wfbc1966f875e2b9332a600ecc4dba14c" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
-</div><div class="col-lg-3"><p><a class="wfbc1966f875e2b9332a600ecc4dba14c" href="sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="wfbc1966f875e2b9332a600ecc4dba14c" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="wfbc1966f875e2b9332a600ecc4dba14c" href="about-us.html" rel="nofollow">About Us</a></p>
+<p>Company Website : <a class="ff860b7b7373e13a7b61bae8f50ac437a" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
+</div><div class="col-lg-3"><p><a class="ff860b7b7373e13a7b61bae8f50ac437a" href="sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="ff860b7b7373e13a7b61bae8f50ac437a" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="ff860b7b7373e13a7b61bae8f50ac437a" href="about-us.html" rel="nofollow">About Us</a></p>
 <p><img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=" ></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/mmlplumbing.co.uk" class="v2acdc8717b9b39cc657cd93a1f749b5c facebook" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="pinterest v2acdc8717b9b39cc657cd93a1f749b5c" rel="nofollow"><i class="fa fa-linkedin"></i></a>
-<a href="https://www.instagram.com/mmlplumbingltd/" class="v2acdc8717b9b39cc657cd93a1f749b5c google-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
-<a href="https://twitter.com/mmlplumbing" class="v2acdc8717b9b39cc657cd93a1f749b5c twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook f68cd31d9ce5f8ffad72a5cd8bd054710" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="pinterest f68cd31d9ce5f8ffad72a5cd8bd054710" rel="nofollow"><i class="fa fa-linkedin"></i></a>
+<a href="https://www.instagram.com/mmlplumbingltd/" class="f68cd31d9ce5f8ffad72a5cd8bd054710 google-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
+<a href="https://twitter.com/mmlplumbing" class="f68cd31d9ce5f8ffad72a5cd8bd054710 twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
