--- a/about-us.html
+++ b/about-us.html
@@ -18,74 +18,74 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
-footer a{
-color:#ffffff;
-text-decoration: underline;
-}
-.x604fc5cb2683af3e112d422c50324c40{
-background-color:#ffc107!important;
-border-color:#ffc107!important;
-color:#000000!important;
-}
-ul{
-list-style: circle;
-}
-.navbar a{
-font-size: 17.7px!important;
-font-weight: bold;
-}
 .nav-link{
 color: #000000!important;
 
 }
-footer *{
-font-size:16px !important;
+.ze49f65bae1aea86a022dbdea09f86bb1{
+background-color:#ffc107!important;
+border-color:#ffc107!important;
+color:#000000!important;
 }
-.f41609eeef2efb244de61e3a4d00302d7 a{
+.c23632d47e0acae5af799a0049ba8d69a a{
 font-size:16px;
 }
-.nav-item{
-padding-left:8px;
-padding-right:8.1px;
-padding-top:4.6px;
-padding-bottom:5.2px;
+.ba9ffe383520c870d1e07a3afa26941bf:hover{
+box-shadow: 0 50.1px 50.3px -25px rgb(0 0 0 / 30%);
+transform: rotate(-2deg) scale(1.03);
 }
-html{
-scroll-behavior: smooth;
+a{
+text-decoration: none!important;
 }
-.x34d4fd01e9cc9dcf141b3a34d5c32164 p,.x34d4fd01e9cc9dcf141b3a34d5c32164 a,.x34d4fd01e9cc9dcf141b3a34d5c32164 span,.x34d4fd01e9cc9dcf141b3a34d5c32164 label{
-font-size:16px!important;
+.xc2bd9a4db73ab00901998184c5fe7bc9 a,.c23632d47e0acae5af799a0049ba8d69a a{
+color:#131313!important;
+text-decoration: underline !important;
+}
+.btn-md{
+padding: 15px 29.7px;
+border-radius: 0;
 }
 footer{
-background:#141414;
+background:#080808;
 color:#ffffff;
 }
 *{
 font-family: 'Kumbh Sans', sans-serif;
 }
-.b8e02888b773ccf0c103e1db769b121a8:hover{
-box-shadow: 0 49.9px 49.9px -25px rgb(0 0 0 / 30%);
-transform: rotate(-2deg) scale(1.03);
+ul{
+list-style: circle;
 }
-.w913edcda87f2387453f6c1d846de97ae{
-border: 1px solid #67849235;
+.navbar a{
+font-size: 17.5px!important;
+font-weight: bold;
+}
+footer a{
+color:#ffffff;
+text-decoration: underline;
+}
+html{
+scroll-behavior: smooth;
+}
+.b2dbc1f80bdb67e826f8538eea984dcca{
+border: 1px solid #63808e31;
 border-radius: 5px;
 padding: 20px 20px;
-background: #f4f2ee;
+background: #eae8e4;
 }
-.f41609eeef2efb244de61e3a4d00302d7 p,.f41609eeef2efb244de61e3a4d00302d7 span,.f41609eeef2efb244de61e3a4d00302d7 label{
+.nav-item{
+padding-left:8.4px;
+padding-right:7.5px;
+padding-top:4.8px;
+padding-bottom:5.2px;
+}
+.xc2bd9a4db73ab00901998184c5fe7bc9 p,.xc2bd9a4db73ab00901998184c5fe7bc9 a,.xc2bd9a4db73ab00901998184c5fe7bc9 span,.xc2bd9a4db73ab00901998184c5fe7bc9 label{
 font-size:16px!important;
 }
-.btn-md{
-padding: 14.8px 29.9px;
-border-radius: 0;
+footer *{
+font-size:16px !important;
 }
-a{
-text-decoration: none!important;
-}
-.x34d4fd01e9cc9dcf141b3a34d5c32164 a,.f41609eeef2efb244de61e3a4d00302d7 a{
-color:#080808!important;
-text-decoration: underline !important;
+.c23632d47e0acae5af799a0049ba8d69a p,.c23632d47e0acae5af799a0049ba8d69a span,.c23632d47e0acae5af799a0049ba8d69a label{
+font-size:16px!important;
 }
 </style>
 </head>
@@ -94,25 +94,25 @@ text-decoration: underline !important;
 <nav class="navbar-expand-lg navbar">
 <a class="navbar-brand" href="index.html"  ><img alt="img/logo.jpg" src="img/logo.jpg" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-<span class="navbar-toggler-icon"></span></button><div class="navbar-collapse collapse" id="navbarSupportedContent">
-<ul class="align-items-center navbar-nav d-flex ml-auto"><li class="nav-item">
-<a class="u3987280944e2e470a5c5e985f913c046 nav-link" href="index.html" >plumbing quotes</a>
+<span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarSupportedContent">
+<ul class="navbar-nav ml-auto d-flex align-items-center"><li class="nav-item">
+<a class="nav-link f735ed9fcdfbc0d0229cb25c03239ec35" href="index.html" >plumbing quotes</a>
 </li>
 <li class="nav-item">
-<a class="u3987280944e2e470a5c5e985f913c046 nav-link" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
+<a class="nav-link f735ed9fcdfbc0d0229cb25c03239ec35" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
 </li>
 <li class="nav-item">
-<a class="u3987280944e2e470a5c5e985f913c046 nav-link" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
+<a class="f735ed9fcdfbc0d0229cb25c03239ec35 nav-link" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
 </li>
 <li class="nav-item">
-<a class="u3987280944e2e470a5c5e985f913c046 nav-link" href="quote-my-job.html" >quote my job</a>
+<a class="f735ed9fcdfbc0d0229cb25c03239ec35 nav-link" href="quote-my-job.html" >quote my job</a>
 </li>
-<li class="dropdown nav-item">
-<a class="u3987280944e2e470a5c5e985f913c046 nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
+<li class="nav-item dropdown">
+<a class="f735ed9fcdfbc0d0229cb25c03239ec35 dropdown-toggle nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
 <div class="dropdown-menu-right dropdown-menu" aria-labelledby="navbarDropdown">
 <a class="dropdown-item" href="local-plumber.html"  >local plumber</a><a class="dropdown-item" href="plumber-in-north-london.html"  >plumber in north london</a><a class="dropdown-item" href="local-plumbing-service.html"  >local plumbing service</a><a class="dropdown-item" href="plumber-north-london.html"  >plumber north london</a></div>
 </li>
-<li class="nav-item"><a class="nav-link u3987280944e2e470a5c5e985f913c046" rel=nofollow href="about-us.html">About Us</a>
+<li class="nav-item"><a class="nav-link f735ed9fcdfbc0d0229cb25c03239ec35" rel=nofollow href="about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -125,7 +125,7 @@ text-decoration: underline !important;
 </div>
 <div class="container py-5">
 <div class="row mb-5 pb-5">
-<div class="col-md-12 mb-3 w913edcda87f2387453f6c1d846de97ae">
+<div class="col-md-12 mb-3 b2dbc1f80bdb67e826f8538eea984dcca">
 <div class="row-item d-flex align-left">
 <div><a href="" class="text-dark">
 <h4>MML Plumbing</h4></a>
@@ -157,22 +157,22 @@ plumber north london</iframe>
 </div>
 </div>
 <footer>
-<div class="container pt-5 py-4" >
+<div class="container py-4 pt-5" >
 <div class="row"><div class="col-lg-3">
 <p>MML Plumbing</p>
-<p>Company Website : <a class="u3987280944e2e470a5c5e985f913c046" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
-</div><div class="col-lg-3"><p><a class="u3987280944e2e470a5c5e985f913c046" href="sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="u3987280944e2e470a5c5e985f913c046" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="u3987280944e2e470a5c5e985f913c046" href="about-us.html" rel="nofollow">About Us</a></p>
+<p>Company Website : <a class="f735ed9fcdfbc0d0229cb25c03239ec35" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
+</div><div class="col-lg-3"><p><a class="f735ed9fcdfbc0d0229cb25c03239ec35" href="sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="f735ed9fcdfbc0d0229cb25c03239ec35" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="f735ed9fcdfbc0d0229cb25c03239ec35" href="about-us.html" rel="nofollow">About Us</a></p>
 <p><img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=" ></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook t212caf08e473c22f946968063bdc9119" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="t212caf08e473c22f946968063bdc9119 pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
-<a href="https://www.instagram.com/mmlplumbingltd/" class="t212caf08e473c22f946968063bdc9119 google-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
-<a href="https://twitter.com/mmlplumbing" class="t212caf08e473c22f946968063bdc9119 twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/mmlplumbing.co.uk" class="xb1d55abd43bab95a00aa577dbdcfbeac facebook" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="xb1d55abd43bab95a00aa577dbdcfbeac pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
+<a href="https://www.instagram.com/mmlplumbingltd/" class="google xb1d55abd43bab95a00aa577dbdcfbeac-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
+<a href="https://twitter.com/mmlplumbing" class="xb1d55abd43bab95a00aa577dbdcfbeac twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
