--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -19,68 +19,68 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
-*{
-font-family: 'Kumbh Sans', sans-serif;
-}
-footer *{
-font-size:16px !important;
-}
-a{
-text-decoration: none!important;
-}
-html{
-scroll-behavior: smooth;
-}
-.btn-md{
-padding: 15.5px 30.3px;
-border-radius: 0;
-}
-footer a{
-color:#ffffff;
-text-decoration: underline;
+.y4044957c3ba9897f3e0666fbb22dc927:hover{
+box-shadow: 0 50.5px 49.7px -25px rgb(0 0 0 / 30%);
+transform: rotate(-2deg) scale(1.03);
 }
 footer{
-background:#060606;
+background:#040404;
 color:#ffffff;
+}
+.yc85943afb8130c631f3fb4457f1901cf a,.ucf61b6d9cbb2e13b1caed74e256ec594 a{
+color:#020202!important;
+text-decoration: underline !important;
+}
+.w0db7940df761eb1c9cf5905dfbcb6dc8{
+background-color:#ffc107!important;
+border-color:#ffc107!important;
+color:#000000!important;
+}
+.yc85943afb8130c631f3fb4457f1901cf p,.yc85943afb8130c631f3fb4457f1901cf a,.yc85943afb8130c631f3fb4457f1901cf span,.yc85943afb8130c631f3fb4457f1901cf label{
+font-size:16px!important;
 }
 .nav-link{
 color: #000000!important;
 
 }
-.yc3348df9535c52319850f76fec6c301f a,.ya216aaf9d288743b93b8b9a3f4edd8ae a{
-color:#060606!important;
-text-decoration: underline !important;
-}
-.navbar a{
-font-size: 18.1px!important;
-font-weight: bold;
-}
-.ya216aaf9d288743b93b8b9a3f4edd8ae a{
+.ucf61b6d9cbb2e13b1caed74e256ec594 a{
 font-size:16px;
 }
-.yc3348df9535c52319850f76fec6c301f p,.yc3348df9535c52319850f76fec6c301f a,.yc3348df9535c52319850f76fec6c301f span,.yc3348df9535c52319850f76fec6c301f label{
+footer *{
+font-size:16px !important;
+}
+html{
+scroll-behavior: smooth;
+}
+*{
+font-family: 'Kumbh Sans', sans-serif;
+}
+.ucf61b6d9cbb2e13b1caed74e256ec594 p,.ucf61b6d9cbb2e13b1caed74e256ec594 span,.ucf61b6d9cbb2e13b1caed74e256ec594 label{
 font-size:16px!important;
 }
-.xf209f5bdf3a023fd2b53e71c21b5e6e3:hover{
-box-shadow: 0 50px 50.5px -25px rgb(0 0 0 / 30%);
-transform: rotate(-2deg) scale(1.03);
+footer a{
+color:#ffffff;
+text-decoration: underline;
 }
-.ya216aaf9d288743b93b8b9a3f4edd8ae p,.ya216aaf9d288743b93b8b9a3f4edd8ae span,.ya216aaf9d288743b93b8b9a3f4edd8ae label{
-font-size:16px!important;
+a{
+text-decoration: none!important;
 }
-.ba5422f5275feea127c9cfd5389fe1f26{
-background-color:#ffc107!important;
-border-color:#ffc107!important;
-color:#000000!important;
-}
-.nav-item{
-padding-left:8.4px;
-padding-right:8.5px;
-padding-top:5.4px;
-padding-bottom:4.5px;
+.navbar a{
+font-size: 18.5px!important;
+font-weight: bold;
 }
 ul{
 list-style: circle;
+}
+.btn-md{
+padding: 14.6px 29.6px;
+border-radius: 0;
+}
+.nav-item{
+padding-left:7.7px;
+padding-right:7.8px;
+padding-top:4.5px;
+padding-bottom:4.8px;
 }
 </style>
 </head>
@@ -89,24 +89,24 @@ list-style: circle;
 <a class="navbar-brand" href="index.html"  ><img alt="img/logo.jpg" src="img/logo.jpg" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarSupportedContent">
-<ul class="ml-auto align-items-center navbar-nav d-flex"><li class="nav-item">
-<a class="ff860b7b7373e13a7b61bae8f50ac437a nav-link" href="index.html" >plumbing quotes</a>
+<ul class="d-flex navbar-nav ml-auto align-items-center"><li class="nav-item">
+<a class="yb787ab977cdaf31802788660169481bb nav-link" href="index.html" >plumbing quotes</a>
 </li>
 <li class="nav-item">
-<a class="nav-link ff860b7b7373e13a7b61bae8f50ac437a" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
+<a class="nav-link yb787ab977cdaf31802788660169481bb" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
 </li>
 <li class="nav-item">
-<a class="ff860b7b7373e13a7b61bae8f50ac437a nav-link" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
+<a class="yb787ab977cdaf31802788660169481bb nav-link" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
 </li>
 <li class="nav-item">
-<a class="ff860b7b7373e13a7b61bae8f50ac437a nav-link" href="quote-my-job.html" >quote my job</a>
+<a class="nav-link yb787ab977cdaf31802788660169481bb" href="quote-my-job.html" >quote my job</a>
 </li>
-<li class="dropdown nav-item">
-<a class="dropdown-toggle ff860b7b7373e13a7b61bae8f50ac437a nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
-<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+<li class="nav-item dropdown">
+<a class="nav-link yb787ab977cdaf31802788660169481bb dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
+<div class="dropdown-menu-right dropdown-menu" aria-labelledby="navbarDropdown">
 <a class="dropdown-item" href="local-plumber.html"  >local plumber</a><a class="dropdown-item" href="plumber-in-north-london.html"  >plumber in north london</a><a class="dropdown-item" href="local-plumbing-service.html"  >local plumbing service</a><a class="dropdown-item" href="plumber-north-london.html"  >plumber north london</a></div>
 </li>
-<li class="nav-item"><a class="ff860b7b7373e13a7b61bae8f50ac437a nav-link" rel=nofollow href="about-us.html">About Us</a>
+<li class="nav-item"><a class="nav-link yb787ab977cdaf31802788660169481bb" rel=nofollow href="about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -173,22 +173,22 @@ https://www.mmlplumbing.co.uk/</br>
 </p>
 </section>
 <footer>
-<div class="pt-5 container py-4" >
+<div class="container py-4 pt-5" >
 <div class="row"><div class="col-lg-3">
 <p>MML Plumbing</p>
-<p>Company Website : <a class="ff860b7b7373e13a7b61bae8f50ac437a" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
-</div><div class="col-lg-3"><p><a class="ff860b7b7373e13a7b61bae8f50ac437a" href="sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="ff860b7b7373e13a7b61bae8f50ac437a" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="ff860b7b7373e13a7b61bae8f50ac437a" href="about-us.html" rel="nofollow">About Us</a></p>
+<p>Company Website : <a class="yb787ab977cdaf31802788660169481bb" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
+</div><div class="col-lg-3"><p><a class="yb787ab977cdaf31802788660169481bb" href="sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="yb787ab977cdaf31802788660169481bb" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="yb787ab977cdaf31802788660169481bb" href="about-us.html" rel="nofollow">About Us</a></p>
 <p><img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=" ></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook f68cd31d9ce5f8ffad72a5cd8bd054710" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="pinterest f68cd31d9ce5f8ffad72a5cd8bd054710" rel="nofollow"><i class="fa fa-linkedin"></i></a>
-<a href="https://www.instagram.com/mmlplumbingltd/" class="f68cd31d9ce5f8ffad72a5cd8bd054710 google-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
-<a href="https://twitter.com/mmlplumbing" class="f68cd31d9ce5f8ffad72a5cd8bd054710 twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/mmlplumbing.co.uk" class="uc504b232a8adebe1757e3fe69f86ecda facebook" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="uc504b232a8adebe1757e3fe69f86ecda pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
+<a href="https://www.instagram.com/mmlplumbingltd/" class="google uc504b232a8adebe1757e3fe69f86ecda-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
+<a href="https://twitter.com/mmlplumbing" class="uc504b232a8adebe1757e3fe69f86ecda twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
